Salesforce/src/objects/CANDIDATE_INFO__c.object
<CustomObject>
    <fields>
        <fullName>CONTACT_NUMBER__c</fullName>
        <label>CONTACT NUMBER</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Canname__c</fullName>
        <label>Canname</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>CANDIADATE INFO</relationshipLabel>
        <relationshipName>CANDIADATE_INFO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Of_Hire__c</fullName>
        <label>Date Of Hire</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EMAIL_ID__c</fullName>
        <label>EMAIL ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <externalId>true</externalId>
        <label>ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Offer_Extended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offer Extended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <label>Qualification</label>
        <picklist>
            <picklistValues>
                <fullName>SSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTERMEDIATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIPLOMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.TECH/B.E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEGREE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.B.B.S</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>STREAM__c</fullName>
        <label>STREAM</label>
        <picklist>
            <controllingField>Qualification__c</controllingField>
            <picklistValues>
                <fullName>MPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI.P.C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.E.C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.COM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E.E.E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E.C.E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C.S.C/I.T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MECH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIVIL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lr1__c</fullName>
        <label>JOB</label>
        <referenceTo>JOBS__c</referenceTo>
        <relationshipLabel>CANDIADATE INFO</relationshipLabel>
        <relationshipName>CANDIADATE_INFO</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>CANDIADATE INFO</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>lr1__c</columns>
        <columns>Qualification__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>NAME OF THE CANDIDATE</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CANDIADATE INFO</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CANVALRULE</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(REGEX( EMAIL_ID__c, &quot;[a-z]{1,}.?[0-9]{0,}@[a-z]{1,}.(?:com|in|.co.in)&quot; ))</errorConditionFormula>
        <errorDisplayField>EMAIL_ID__c</errorDisplayField>
        <errorMessage>PROVIDE VALID ADDRESS</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>V_LOOKUP</fullName>
        <active>true</active>
        <description>AVOID DUPLICATION WHILE SAVING RECORDS IN TO THE CANDIDATE INFO OBJECT.</description>
        <errorConditionFormula>Name = VLOOKUP($ObjectType.CANDIDATE_INFO__c.Fields.Name, $ObjectType.CANDIDATE_INFO__c.Fields.Name,Name )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>ALREADY NAME IS EXISTED</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rule</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED(Canname__c)</errorConditionFormula>
        <errorMessage>doesn&apos;t_changed</errorMessage>
    </validationRules>
</CustomObject>